src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__compose_primitive_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔═══════════════════════════[ Step 2/7: Primitive ]════════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔════════════════════════════════[ Primitive ]═════════════════════════════════╗"
"║Choose the primitive that matches the team's shape.                           ║"
"║ > pipeline: implementer, reviewer, docs                                      ║"
"║   fan-out: reviewer                                                          ║"
"║   single-pass: no required roles                                             ║"
"║   verdict-only: reviewer                                                     ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                               Select a primitive                               "
"                    [↑/↓] pick   [Enter] choose   [Esc] back                    "
