src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__compose_roles_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔═════════════════════════════[ Step 3/6: Roles ]══════════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════[ Roles ]═══════════════════════════════════╗"
"║Roles to bind                          Healthy agents                         ║"
"║ > implementer (unbound)                > claude                              ║"
"║   reviewer (unbound)                                                         ║"
"║   docs (unbound)                                                             ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                            Bind every required role                            "
"   [↑/↓ j/k] role   [←/→ h/l] agent   [Space] bind   [Enter] next   [Esc] back  "
