src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__compose_save_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔══════════════════════════════[ Step 5/7: Save ]══════════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════════[ Save ]═══════════════════════════════════╗"
"║Name (alphanumeric + hyphen, no leading dot, no slashes)                      ║"
"║> my-team                                                                     ║"
"║                                                                              ║"
"║Tier: user    [Tab] toggle    [Enter] save                                    ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                     [Tab] tier   [Enter] save   [Esc] back                     "
"                                                                                "
