src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__compose_save_failed_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔══════════════════════════[ Step 7/7: Save Failed ]═══════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════[ Save Failed ]════════════════════════════════╗"
"║                                                                              ║"
"║                              name already exists                             ║"
"║                                                                              ║"
"║                            Press Enter to return.                            ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                             [r] retry   [Esc] back                             "
"                                                                                "
