src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__compose_source_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔═════════════════════════════[ Step 1/7: Source ]═════════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════[ Source ]══════════════════════════════════╗"
"║Start blank or extend an existing preset.                                     ║"
"║                                                                              ║"
"║ > Blank                                                                      ║"
"║   Extends: default-coder                                                     ║"
"║   Extends: user-team                                                         ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                        Pick Blank or an existing preset                        "
"                    [↑/↓] pick   [Enter] choose   [Esc] back                    "
