src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__home_60x20.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔═══════════════════[ Step 0/0: Teams ]════════════════════╗"
"║                                                          ║"
"╚══════════════════════════════════════════════════════════╝"
"╔═════════════════════[ Team Wizard ]══════════════════════╗"
"║                                                          ║"
"║                     Pick a team flow:                    ║"
"║                                                          ║"
"║        [c] Compose: Build or extend a team preset        ║"
"║      [l] Launch: Run a team on issues / a milestone      ║"
"║       [m] Manage: Edit or delete user-tier presets       ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"╚══════════════════════════════════════════════════════════╝"
"     [c] Compose   [l] Launch   [m] Manage   [Esc] Back     "
"                                                            "
